[gd_scene load_steps=18 format=3 uid="uid://bofsie7wntey3"]

[ext_resource type="Script" uid="uid://c0bwxi56cvjx8" path="res://Objects/Shelter/shelter.gd" id="1_x4fh4"]
[ext_resource type="Texture2D" uid="uid://hoqmxhp5bhdr" path="res://Assets/0x72_16x16RobotTileset.v1.png" id="2_2wgjq"]
[ext_resource type="Script" uid="uid://bpl1g10mhrw6e" path="res://Resources/MapData/map_scene.gd" id="2_a5pnm"]
[ext_resource type="PackedScene" uid="uid://diqjv4565hiir" path="res://UI/Map/MapScenes/ShelterMapScene/shelter_map_scene.tscn" id="2_dwgqv"]
[ext_resource type="Script" uid="uid://crpc5rnv8l4t4" path="res://Objects/Shelter/shelter_interaction_area.gd" id="3_bk1c3"]
[ext_resource type="PackedScene" uid="uid://d3disugmcknvo" path="res://Components/InteractionArea/interaction_area.tscn" id="3_lf5i5"]
[ext_resource type="PackedScene" uid="uid://cihd7i38vg5st" path="res://UI/Map/MapScenes/SelectableMapScene/selectable_map_scene.tscn" id="4_2e1st"]
[ext_resource type="Script" uid="uid://xi5ukiv7cagg" path="res://Resources/MapData/selectable_map_entity.gd" id="5_mgx7h"]
[ext_resource type="Script" uid="uid://oksv2oda1t17" path="res://Resources/QueryableEntity/transport_bucket_destination_selection_queryable_entity.gd" id="7_0mqy5"]
[ext_resource type="PackedScene" uid="uid://g1sd2n28vfvx" path="res://Components/PowerConnection/power_connection.tscn" id="9_cdae2"]

[sub_resource type="Resource" id="Resource_il2jg"]
resource_local_to_scene = true
script = ExtResource("2_a5pnm")
packed_scene = ExtResource("2_dwgqv")

[sub_resource type="Resource" id="Resource_5gqqe"]
resource_local_to_scene = true
script = ExtResource("5_mgx7h")
packed_scene = ExtResource("4_2e1st")

[sub_resource type="AtlasTexture" id="AtlasTexture_2wxb3"]
atlas = ExtResource("2_2wgjq")
region = Rect2(112, 120, 48, 24)

[sub_resource type="Resource" id="Resource_mgd0d"]
resource_local_to_scene = true
script = ExtResource("5_mgx7h")
packed_scene = ExtResource("4_2e1st")

[sub_resource type="Resource" id="Resource_lcoay"]
resource_local_to_scene = true
script = ExtResource("7_0mqy5")
selectable_map_entity = SubResource("Resource_mgd0d")

[sub_resource type="AtlasTexture" id="AtlasTexture_8gy5f"]
atlas = ExtResource("2_2wgjq")
region = Rect2(112, 120, 48, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rukdd"]
size = Vector2(46, 80)

[node name="Shelter" type="Node2D"]
script = ExtResource("1_x4fh4")
map_scene = SubResource("Resource_il2jg")
selectable_map_entity = SubResource("Resource_5gqqe")
shelter_selection_texture = SubResource("AtlasTexture_2wxb3")
transport_bucket_destination = SubResource("Resource_lcoay")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_8gy5f")

[node name="ShelterInteractionArea" parent="." node_paths=PackedStringArray("shelter") instance=ExtResource("3_lf5i5")]
collision_mask = 512
script = ExtResource("3_bk1c3")
shelter = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShelterInteractionArea"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_rukdd")

[node name="PowerConnector" parent="." instance=ExtResource("9_cdae2")]

[connection signal="interacted_with" from="ShelterInteractionArea" to="." method="_on_interaction_area_interacted_with"]
[connection signal="transport_bucket_arrived" from="PowerConnector" to="." method="_on_power_connector_transport_bucket_arrived"]
